fix: reset classname of element which was be covered by global

--- a/src/ui/views/MnemonicBackup/style.less
+++ b/src/ui/views/MnemonicBackup/style.less
@@ -150,7 +150,7 @@
 
   }
 
-  .button-container {
+  .backup-button-container {
     width: 100%;
     margin-bottom: 40px;
 
